# top-textbooks-service

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  alma_config.yaml  env-template  pyproject.toml  requirements.test.txt  requirements.txt  setup.cfg  tox.ini
.devcontainer/: devcontainer.json
src/alma/: __init__.py  errors.py  processor.py  server.py  utils.py  web.py
src/core/: errors.py  gateway.py  handling.py  logging.py  request_handler.py  utils.py  web.py  web_errors.py
src/textbooks/: __init__.py  errors.py  processor.py  server.py  textbooks.py  utils.py  web.py
src/textbooks/core/: exceptions.py  handling.py  utils.py  web_errors.py
tests/: processor_test.py  web_client_test.py
tests/alma/: processor_test.py  web_client_test.py
tests/core/: gateway_test.py
tests/resources/: retrieve_bibs_200_response_available.xml
tests/textbooks/: processor_test.py  web_client_test.py
