[project]
name = "top-textbooks-service"
version = "0.0.1"
dependencies = [
    "flask",
    "python-dotenv",
    "requests",
]
[project.optional-dependencies]
test = [
    "debugpy",
    "pytest",
    "pytest-cov",
    "ruff"
]
[project.scripts]
top-textbooks-service = "textbooks.server:run"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    'E', # pycodestyle errors
    'W' # pycodestyle warnings
]
