[project]
name = "top-textbooks-service"
version = "0.0.1"
dependencies = [
    "beautifulsoup4",
    "flask",
    "jsonschema",
    "lxml",
    "python-dotenv",
    "python-json-logger",
    "PyYAML",
    "requests",
    "waitress",
]
[project.optional-dependencies]
test = [
    "debugpy",
    "pipdeptree",
    "pytest",
    "pytest-cov",
    "ruff"
]
[project.scripts]
top-textbooks-service = "textbooks.server:run"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    'E', # pycodestyle errors
    'W' # pycodestyle warnings
]
